--- a/code/index.html
+++ b/code/index.html
@@ -12,9 +12,9 @@
 <div >
     <section class="section6">
    <ul>
-       <li><img src="images/image1.jpg" alt="Placeholder1" class="image1" /> </li>
-       <li><img src="images/image2.jpg" alt="Placeholder2" class="image2"/> </li>
-       <li><img src="images/image3.jpg" alt="Placeholder3" class="image3"/> </li>
+       <li><img src="images/image1.jpg" alt="Placeholder1" class="image" /> </li>
+       <li><img src="images/image2.jpg" alt="Placeholder2" class="image"/> </li>
+       <li><img src="images/image3.jpg" alt="Placeholder3" class="image"/> </li>
     </ul>
     </section>
 </div>
